# BinaryTree

./: .gitignore  CMakeLists.txt  README.md  bundle.js  index.html  tree.wasm
impl/: AVLTree.tpp  binaryTree.tpp  iterators.tpp  treeNode.tpp
inc/: AVLTree.hpp  binaryTree.hpp  iterators.hpp  treeNode.hpp
src/: main.cpp
tests/: large_reverse_sorted_performance.csv  medium_sorted_performance.csv  performance_granular.csv  performance_small_large.csv  performance_sorted_insert.csv  performance_very_large.csv  plot_performance.py  small_sorted_comparison.csv  test_avl_tree.cpp  test_binary_tree.cpp  test_custom_types.cpp  test_performance.cpp  test_performance_big.cpp  test_sorted_performance.cpp  test_threaded_tree.cpp
types/: complex.hpp  person.hpp  types.hpp
wasm/: treeApi.cpp
web/: package-lock.json  package.json  webpack.config.js
web/public/: index.html  tree.js
web/src/: App.jsx  treeApi.js
web/src/components/: ComplexInput.jsx  FunctionalOperations.jsx  PersonInput.jsx  TreeView.jsx  TypeSelector.jsx
